--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,4 +11,8 @@ layout: default
     {{ content }}
   </div>
 
+  <div class="post-languages">
+      {% include page-languages.html %}
+  </div>
+
 </article>
