Fixing the footer

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -106,7 +106,7 @@ a {
     }
 
     &:hover {
-        color: $text-color;
+        color: $brand-color;
         text-decoration: underline;
     }
 }
