--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -142,6 +142,22 @@
     float: left;
     margin-bottom: $spacing-unit / 2;
     padding-left: $spacing-unit / 2;
+
+    ul.links-join, ul.links-legal {
+        margin: 5px 0;
+        overflow: hidden;
+
+        li {
+            float: left;
+            margin: 0;
+            list-style-type: none;
+
+            &.wrap:before {
+                content: "\00B7\00A0";
+                margin-left: 3px;
+            }
+        }
+    }
 }
 
 .footer-col-1 {
