--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -12,18 +12,20 @@
 }
 
 .site-title {
-    font-size: 26px;
-    font-weight: 300;
-    color: #e29fa0;
+    font-size: 18px;
+    font-weight: bold;
+    text-transform: uppercase;
     line-height: 56px;
     letter-spacing: -1px;
     margin-bottom: 0;
     float: left;
 
-    &,
-    &:visited,
+    &, &:visited {
+        color: #e29fa0;
+    }
     &:hover {
         color: #fff;
+        text-decoration: none;
     }
 }
 
@@ -217,7 +219,7 @@
 
 .page-heading, .home h1 {
     color: #c13832;
-    margin-top: 40px;
+    margin-top: 5px;
     font-size: 4.5rem;
     text-align: center;
 }
