--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -224,6 +224,12 @@
     text-align: center;
 }
 
+.home {
+    h2 {
+        font-size: 2rem;
+    }
+}
+
 .post-list {
     margin-left: 0;
     list-style: none;
@@ -267,7 +273,7 @@
     font-weight: normal;
 
     h2 {
-        font-size: 32px;
+        font-size: 2rem;
 
         @include media-query($on-laptop) {
             font-size: 28px;
