--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -314,6 +314,11 @@
 
 .post-languages {
     font-size: .80rem;
+
+    .add-translation {
+        text-align: right;
+        color: #e29fa0;
+    }
 }
 
 #tabzilla {
