--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -240,8 +240,7 @@
     }
 
     .disabled {
-        opacity: 0.5;
-        filter:grayscale(90%);
+        filter:grayscale(90%) opacity(50%);
     }
 }
 
@@ -317,7 +316,6 @@
 
     .add-translation {
         text-align: right;
-        color: #e29fa0;
     }
 }
 
