--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,6 +8,10 @@ layout: default
   </header>
 
   <div class="post-content">
+    <div id="share">
+            <p class="twitter"><a href="https://twitter.com/home?status=I am contributing to {{ page.title }} at %40Mozilla Check how easy it is to %23mozactivate {{ page.url | prepend: site.baseurl | prepend: site.url }}" data-related="mozparticipate,mozilla" data-dnt="true" data-show-count="false">Share</a></p>
+    </div>
+
     {{ content }}
   </div>
 
