--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -24,7 +24,7 @@
                 {% endfor %}
                 </ul>
 
-                <p class="add-translation"><a href="https://github.com/mozilla/activate.mozilla.community#how-to-add-or-update-content#how-to-add-or-update-content">Submit a translation for this page</a></p>
+                <p class="add-translation"><a href="https://github.com/mozilla/activate.mozilla.community#how-to-add-or-update-content">Submit a translation for this page</a></p>
             </div>
 
         </div>
