--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -334,6 +334,15 @@
     margin-left: 14px;
 }
 
+.left {
+    float: left;
+    margin-right: 14px;
+}
+
+.center {
+    text-align: center;
+}
+
 #share {
     margin-top: -70px;
     float: right;
