--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,10 +7,14 @@ layout: default
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
 
+  <div class="share twitter">
+          <p class="twitter"><a title="Share this page on Twitter" href="https://twitter.com/home?status=I am contributing to {{ page.title }} at %40Mozilla Check how easy it is to %23mozactivate {{ page.url | prepend: site.baseurl | prepend: site.url }}" data-related="mozparticipate,mozilla" data-dnt="true" data-show-count="false">Tweet</a></p>
+  </div>
+  <div class="share facebook">
+          <p class="facebook"><a title="Share this page on Facebook" href="http://www.facebook.com/sharer/sharer.php?u={{ page.url | prepend: site.baseurl | prepend: site.url }}" >Share</a></p>
+  </div>
+
   <div class="post-content">
-    <div id="share">
-            <p class="twitter"><a href="https://twitter.com/home?status=I am contributing to {{ page.title }} at %40Mozilla Check how easy it is to %23mozactivate {{ page.url | prepend: site.baseurl | prepend: site.url }}" data-related="mozparticipate,mozilla" data-dnt="true" data-show-count="false">Share</a></p>
-    </div>
 
     {{ content }}
   </div>
