--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -229,6 +229,7 @@
         font-size: 2rem;
         text-align: center;
         margin: 1.5em auto;
+        padding-top: 1em;
         clear: both;
     }
 
@@ -277,6 +278,10 @@
 /**
  * Posts
  */
+.post {
+    position: relative;
+}
+
 .post-header {
     margin-bottom: $spacing-unit;
 }
@@ -343,38 +348,56 @@
     text-align: center;
 }
 
-#share {
+.share {
+    position: absolute;
     margin-top: -70px;
-    float: right;
-    margin-right: -40px;
+    right: -40px;
     text-align: center;
     color: #FFF;
     font-weight: bold;
 
-
-    p.twitter {
-        background: url("https://www.mozilla.org/media/img/contribute/signup/twitter.png") no-repeat #0c99d5;
-        margin: auto;
-        margin-top: 7px;
-        border-radius: 6px 0px 0px 6px;
-        padding-left: 40px;
-        background-position: 8px 4px;
+    p {
         display: block;
         opacity: 0.6;
         min-height: 40px;
-        min-width: 70px;
+        min-width: 48px;
+        box-shadow: 1px 0px 1px 1px #CCC;
+        margin: auto;
+        margin-top: 7px;
+        border-radius: 6px 0px 0px 6px;
 
         &:hover {
-            background-color: #2165a9;
+            opacity: 1;
         }
 
         a {
             display: block;
             color: #FFF;
-            width: 70px;
             padding-top: 8px;
+            opacity: 0;
+            transition: padding-left .5s, width .5s, opacity .2s ease-in;
+
+            &:hover {
+                text-decoration: none;
+                width: 70px;
+                opacity: 1;
+                padding-left: 40px;
+            }
         }
     }
+    p.twitter {
+        background: url("/activate.mozilla.community/asserts/img/twitter.png") no-repeat #0c99d5;
+        background-position: 8px 4px;
+    }
+
+    p.facebook {
+        background: url("/activate.mozilla.community/asserts/img/facebook.png") no-repeat #3B5998;
+        background-position: 8px 4px;
+    }
+}
+
+div.facebook {
+    margin-top: -20px;
 }
 
 #tabzilla {
