--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -400,6 +400,14 @@ div.facebook {
     margin-top: -20px;
 }
 
+#markdown-toc {
+    padding: 15px 20px 15px 35px;
+    background: #f4f7f8;
+    margin-left: 0px;
+    display: table;
+    border-left: solid 2px #acb0bd;
+}
+
 #tabzilla {
 	position:relative;
 	float:right
