--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -3,6 +3,7 @@
  */
 .site-header {
     border-bottom: 1px solid #ad322d;
+    border-top: 2px solid #fff;
     color: #fff;
     min-height: 40px;
     background: #c13832;
