--- a/css/main.scss
+++ b/css/main.scss
@@ -16,7 +16,7 @@ $spacing-unit:     30px;
 
 $text-color:       #333;
 $background-color: #fff;
-$brand-color:      #09a7c3;
+$brand-color:      #0096dd;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
