--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,6 +4,10 @@
 
     <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
 
+    <div class="trigger">
+        <a class="page-link" href="faq/">FAQ</a>
+    </div>
+
     <!--
     <nav class="site-nav">
       <a href="#" class="menu-icon">
