--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
     <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
 
     <div class="trigger">
-        <a class="page-link" href="faq/">FAQ</a>
+        <a class="page-link" href="/faq">FAQ</a>
     </div>
 
     <!--
