--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,3 +1,5 @@
+{% assign l = site.data.l10n.[page.lang] %}
+
 <!DOCTYPE html>
 <html>
 
@@ -15,14 +17,7 @@
             <div class="post-languages">
                 {% assign pages=site.pages | where:"ref", page.ref | sort: 'lang' %}
 
-                <p>Other languages</p>
-                <ul>
-                {% for page in pages %}
-                    <li>
-                        <a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }} ({{page.lang}})</a>
-                    </li>
-                {% endfor %}
-                </ul>
+                <p class="language-list">{{ l.languages }}: {% for page in pages %} <a title="{{ page.title }}" href="{{ page.url | prepend: site.baseurl }}">{{page.lang}}</a> {% endfor %}</p>
 
                 <p class="add-translation"><a href="https://github.com/mozilla/activate.mozilla.community#how-to-add-or-update-content">Submit a translation for this page</a></p>
             </div>
