--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -19,7 +19,7 @@
 
                 <p class="language-list">{{ l.languages }}: {% for page in pages %} <a title="{{ page.title }}" href="{{ page.url | prepend: site.baseurl }}">{{page.lang}}</a> {% endfor %}</p>
 
-                <p class="add-translation"><a href="https://github.com/mozilla/activate.mozilla.community#how-to-add-or-update-content">Submit a translation for this page</a></p>
+                <p class="add-translation"><a href="https://github.com/mozilla/activate.mozilla.community#how-to-add-or-update-content">{{ l.submit-translation }}</a></p>
             </div>
 
         </div>
