Highlight current language

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -348,6 +348,12 @@
     }
 }
 
+/* Language list */
+.en:lang(en), .es:lang(es) {
+    font-weight: bold;
+}
+
+
 .post-languages {
     font-size: .80rem;
     clear: both;
