--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,7 @@
 
     <div class="trigger">
         <a class="page-link" href="{{ site.baseurl }}/{{ l.lang-url }}faq">{{ l.faq }}</a>
+        <a class="page-link" href="{{ site.baseurl }}/{{ l.lang-url }}roadmap">{{ l.roadmap }}</a>
     </div>
 
       <div id="tabzilla">
