Language selector for all pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,11 @@
     <div class="page-content">
       <div class="wrapper">
         {{ content }}
+
+        <div class="post-languages">
+            {% include page-languages.html %}
+        </div>
+        
       </div>
     </div>
 
