--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -15,11 +15,7 @@
             {{ content }}
 
             <div class="post-languages">
-                {% assign pages=site.pages | where:"ref", page.ref | sort: 'lang' %}
-
-                <p class="language-list">{{ l.languages }}: {% for page in pages %} <a  class="{{ page.lang }}" title="{{ page.title }}" href="{{ page.url | prepend: site.baseurl }}">{{page.lang}}</a> {% endfor %}</p>
-
-                <p class="add-translation"><a href="https://github.com/mozilla/activate.mozilla.community#how-to-add-or-update-content">{{ l.submit-translation }}</a></p>
+                {% include page-languages.html %}
             </div>
 
         </div>
