--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -422,12 +422,12 @@
         }
     }
     p.twitter {
-        background: url("/activate.mozilla.community/asserts/img/twitter.png") no-repeat #0c99d5;
+        background: url("/asserts/img/twitter.png") no-repeat #0c99d5;
         background-position: 8px 4px;
     }
 
     p.facebook {
-        background: url("/activate.mozilla.community/asserts/img/facebook.png") no-repeat #3B5998;
+        background: url("/asserts/img/facebook.png") no-repeat #3B5998;
         background-position: 8px 4px;
     }
 }
