--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,4 +19,16 @@
   {% for page in pages %}
     <link rel="alternate" hreflang="{{ page.lang }}" href="{{ page.url }}" />
   {% endfor %}
+
+  <!-- Analytics -->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-49796218-42', 'auto');
+    ga('send', 'pageview');
+
+  </script>
 </head>
