Implementing breadcumbs for subpages. Fix #12

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -348,6 +348,10 @@
     }
 }
 
+.breadcumbs {
+    font-size: .80rem;
+}
+
 /* Language list */
 .en:lang(en), .es:lang(es) {
     font-weight: bold;
