--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,6 +5,13 @@ layout: default
 
 <article class="post">
 
+  {% if page.parent %}
+  {% assign parent=site.pages | where:"ref", page.parent | where: 'lang', page.lang %}
+    <section class="breadcumbs">
+        <p><a href="{{ parent[0].permalink }}">{{ parent[0].title }}</a> - {{page.title}}</p>
+    </section>
+  {% endif %}
+
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
