Issue #10 : Adding Participaiton to site nav

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,6 +9,7 @@
     <div class="trigger">
         <a class="page-link" href="{{ site.baseurl }}/{{ l.lang-url }}faq">{{ l.faq }}</a>
         <a class="page-link" href="{{ site.baseurl }}/{{ l.lang-url }}roadmap">{{ l.roadmap }}</a>
+        <a class="page-link" href="{{ site.baseurl }}/{{ l.lang-url }}participation">{{ l.participation }}</a>
     </div>
 
       <div id="tabzilla">
