Parameters for social shared links. #1

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -17,10 +17,10 @@ layout: default
   </header>
 
   <div class="share twitter">
-          <p class="twitter"><a title="{{ l.twitter-text1 }}" href="https://twitter.com/home?status={{ l.twitter-text2 }} {{ page.title }} {{ l.twitter-text3 }} {{ page.url | prepend: site.baseurl | prepend: site.url }}" data-related="mozparticipate,mozilla" data-dnt="true" data-show-count="false">Tweet</a></p>
+          <p class="twitter"><a title="{{ l.twitter-text1 }}" href="https://twitter.com/home?status={{ l.twitter-text2 }} {{ page.title }} {{ l.twitter-text3 }} {{ page.url | prepend: site.baseurl | prepend: site.url }}?utm_source=twitter.com&amp;utm_medium=social&amp;utm_campaign=moz-community-share" data-related="mozparticipate,mozilla" data-dnt="true" data-show-count="false">Tweet</a></p>
   </div>
   <div class="share facebook">
-          <p class="facebook"><a title="{{ l.facebook-text }}" href="https://www.facebook.com/sharer/sharer.php?u={{ page.url | prepend: site.baseurl | prepend: site.url }}" >{{ l.share }}</a></p>
+          <p class="facebook"><a title="{{ l.facebook-text }}" href="https://www.facebook.com/sharer/sharer.php?u={{ page.url | prepend: site.baseurl | prepend: site.url }}?utm_source=facebook.com&amp;utm_medium=social&amp;utm_campaign=moz-community-share" >{{ l.share }}</a></p>
   </div>
 
   <div class="post-content">
