Add -webkit-filter to normal filter to make sure they work in Chrome as well (fixes issue #28)

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -272,7 +272,8 @@
     }
 
     .disabled {
-        filter:grayscale(90%) opacity(25%);
+        filter: grayscale(90%) opacity(25%);
+        -webkit-filter: grayscale(90%) opacity(25%);
         font-weight: normal;
     }
 }
