Adding language template and pt and fr

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -354,7 +354,7 @@
 }
 
 /* Language list */
-.en:lang(en), .es:lang(es) {
+.en:lang(en), .es:lang(es), .pt:lang(pt), .fr:lang(fr) {
     font-weight: bold;
 }
 
