--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,13 +8,13 @@
     {% include header.html %}
 
     <div class="page-content">
-      <div class="wrapper">
+      <div class="wrapper container">
         {{ content }}
 
         <div class="post-languages">
-            {% include page-languages.html %}
+          {% include page-languages.html %}
         </div>
-        
+
       </div>
     </div>
 
