--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,12 @@
 <footer class="site-footer">
 
-  <div class="wrapper">
+  <div class="wrapper container row">
 
-      <div class="footer-col footer-col-1">
+      <div class="footer-col col-md-4">
         <h1 class="logo"><a href="https://www.mozilla.org/" data-link-type="footer" data-link-name="Mozilla">Mozilla</a></h1>
         <p class="license">Portions of this content are ©1998–2016 by individual mozilla.org contributors. Content available under a <a href="https://www.mozilla.org/foundation/licensing/website-content/">Creative Commons license</a>.</p>
       </div>
-      <div class="footer-col footer-col-2">
+      <div class="footer-col col-md-4">
         <ul class="links-join">
           <li><a href="https://www.mozilla.org/contact/" data-link-type="footer" data-link-name="Contact Us">Contact Us</a></li>
           <li class="wrap"><a href="https://donate.mozilla.org/en-US/?presets=100,50,25,15&amp;amount=50&amp;ref=EOYFR2015&amp;utm_campaign=EOYFR2015&amp;utm_source=mozilla.org&amp;utm_medium=referral&amp;utm_content=footer&amp;currency=usd" class="donate" data-link-type="footer" data-link-name="Donate">Donate</a></li>
@@ -21,21 +21,21 @@
           <li class="clear"><a href="https://www.mozilla.org/about/legal/fraud-report/" data-link-type="footer" data-link-name="Report Trademark Abuse">Report Trademark Abuse</a></li>
         </ul>
       </div>
-      <div class="footer-col footer-col-3">
+      <div class="footer-col col-md-4">
         <ul class="links-social">
           <li>
             Mozilla:
             <ul>
-              <li><a href="https://twitter.com/mozilla" data-link-type="footer" data-link-name="Twitter (@mozilla)">Twitter<span> (@mozilla)</span></a></li>
-              <li><a href="https://www.facebook.com/mozilla" data-link-type="footer" data-link-name="Facebook (Mozilla)">Facebook<span> (Mozilla)</span></a></li>
+              <li><a href="https://twitter.com/mozilla" data-link-type="footer" data-link-name="Twitter">Twitter</a></li>
+              <li><a href="https://www.facebook.com/mozilla" data-link-type="footer" data-link-name="Facebook">Facebook</a></li>
             </ul>
           </li>
           <li>
             Firefox:
             <ul>
-              <li><a href="https://twitter.com/firefox" data-link-type="footer" data-link-name="Twitter (@firefox)">Twitter<span> (@firefox)</span></a></li>
-              <li><a href="https://www.facebook.com/Firefox" data-link-type="footer" data-link-name="Facebook (Firefox)">Facebook<span> (Firefox)</span></a></li>
-              <li><a href="https://www.youtube.com/firefoxchannel" data-link-type="footer" data-link-name="YouTube (firefoxchannel)">YouTube<span> (firefoxchannel)</span></a></li>
+              <li><a href="https://twitter.com/firefox" data-link-type="footer" data-link-name="Twitter">Twitter</a></li>
+              <li><a href="https://www.facebook.com/Firefox" data-link-type="footer" data-link-name="Facebook">Facebook</a></li>
+              <li><a href="https://www.youtube.com/firefoxchannel" data-link-type="footer" data-link-name="YouTube">YouTube</a></li>
             </ul>
           </li>
         </ul>
