--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,9 +8,10 @@
   <title>{% if page.title %}{{ page.title | escape }} - {{ l.site-title | escape }}{% else %}{{ l.site-title | escape }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-  <link rel="shortcut icon" href="{{"/asserts/img/favicon.ico" | prepend: site.baseurl | prepend: site.url }}">
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="shortcut icon" href="{{"/asserts/favicon.ico" | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="stylesheet" href="//code.cdn.mozilla.net/fonts/fira.css">
+  <link rel="stylesheet" href="{{ "/asserts/css/bootstrap.min.css" | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="stylesheet" href="{{ "/asserts/css/main.css" | prepend: site.baseurl | prepend: site.url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 
@@ -20,6 +21,8 @@
     <link rel="alternate" hreflang="{{ page.lang }}" href="{{ page.url }}" />
   {% endfor %}
 
+  <script src="{{ "/asserts/js/jquery.min.js" | prepend: site.baseurl | prepend: site.url }}"></script>
+  <script src="{{ "/asserts/js/bootstrap.min.js" | prepend: site.baseurl | prepend: site.url }}"></script>
   <!-- Analytics -->
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
