--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,20 +2,24 @@
 
 <header class="site-header">
 
-  <div class="wrapper">
+  <div class="wrapper container">
 
-    <a class="site-title" href="{{ site.baseurl }}/{{ l.lang-url }}">{{ l.site-title }}</a>
+    <a class="site-title" href="{{ site.baseurl }}/{{ l.lang-url }}">
+      <img src="/asserts/img/activate.png" alt="{{ l.site-title }}" class="brand"></a>
 
-    <div class="trigger">
-        <a class="page-link" href="{{ site.baseurl }}/{{ l.lang-url }}faq">{{ l.faq }}</a>
-        <a class="page-link" href="{{ site.baseurl }}/{{ l.lang-url }}roadmap">{{ l.roadmap }}</a>
-        <a class="page-link" href="{{ site.baseurl }}/{{ l.lang-url }}participation">{{ l.participation }}</a>
+    <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#CollapsingNavbar" aria-controls="CollapsingNavbar" aria-expanded="false" aria-label="Toggle navigation">
+      &#9776;
+    </button>
+
+    <div class="trigger collapse navbar-collapse" id="CollapsingNavbar">
+      <a class="page-link" href="{{ site.baseurl }}/{{ l.lang-url }}faq">{{ l.faq }}</a>
+      <a class="page-link" href="{{ site.baseurl }}/{{ l.lang-url }}roadmap">{{ l.roadmap }}</a>
+      <a class="page-link" href="{{ site.baseurl }}/{{ l.lang-url }}participation">{{ l.participation }}</a>
     </div>
 
-      <div id="tabzilla">
-            <a href="https://www.mozilla.org/" data-link-type="nav" data-link-name="tabzilla">Mozilla</a>
-        </div>
-    </nav>
+    <div id="tabzilla" class="hidden-xs">
+      <a href="https://www.mozilla.org/" data-link-type="nav" data-link-name="tabzilla">Mozilla</a>
+    </div>
 
   </div>
 
