--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -10,13 +10,13 @@
     {% include header.html %}
 
     <div class="page-content">
-      <div class="wrapper">
+      <div class="wrapper container">
         <div class="home">
-            {{ content }}
+          {{ content }}
 
-            <div class="post-languages">
-                {% include page-languages.html %}
-            </div>
+          <div class="post-languages">
+            {% include page-languages.html %}
+          </div>
 
         </div>
       </div>
