--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -101,13 +101,16 @@ a {
     color: $brand-color;
     text-decoration: none;
 
-    &:visited {
-        color: darken($brand-color, 15%);
+    &:focus,
+    &:active {
+        text-decoration: none;
+        color: $brand-color;
     }
 
     &:hover {
         color: $brand-color;
-        text-decoration: underline;
+        text-decoration: none;
+        color: darken($brand-color, 15%);
     }
 }
 
@@ -163,8 +166,6 @@ pre {
  * Wrapper
  */
 .wrapper {
-    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
-    max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
     margin-right: auto;
     margin-left: auto;
     padding-right: $spacing-unit;
@@ -172,10 +173,29 @@ pre {
     @extend %clearfix;
 
     @include media-query($on-laptop) {
-        max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
-        max-width:         calc(#{$content-width} - (#{$spacing-unit}));
         padding-right: $spacing-unit / 2;
         padding-left: $spacing-unit / 2;
+    }
+
+    @media all and (min-width: 768px) {
+        .trigger {
+            display: inline-block !important;
+        }
+    }
+
+    @include media-query($on-palm) {
+        .trigger {
+            background-color: $brand-color;
+            z-index: 99;
+            width: 150px;
+            border: none;
+            position: absolute;
+            right: 0px;
+            top: 58px;
+            margin-right: 0;
+            border: none;
+            border-top-color: $brand-color !important;
+        }
     }
 }
 
