Append slash on internal urls

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,9 +12,9 @@
     </button>
 
     <div class="trigger collapse navbar-collapse" id="CollapsingNavbar">
-      <a class="page-link" href="{{ site.baseurl }}/{{ l.lang-url }}faq">{{ l.faq }}</a>
-      <a class="page-link" href="{{ site.baseurl }}/{{ l.lang-url }}roadmap">{{ l.roadmap }}</a>
-      <a class="page-link" href="{{ site.baseurl }}/{{ l.lang-url }}participation">{{ l.participation }}</a>
+      <a class="page-link" href="{{ site.baseurl }}/{{ l.lang-url }}faq/">{{ l.faq }}</a>
+      <a class="page-link" href="{{ site.baseurl }}/{{ l.lang-url }}roadmap/">{{ l.roadmap }}</a>
+      <a class="page-link" href="{{ site.baseurl }}/{{ l.lang-url }}participation/">{{ l.participation }}</a>
     </div>
 
     <div id="tabzilla" class="hidden-xs">
