--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
         <ul class="links-join">
           <li><a href="https://www.mozilla.org/contact/" data-link-type="footer" data-link-name="Contact Us">Contact Us</a></li>
           <li class="wrap"><a href="https://donate.mozilla.org/en-US/?presets=100,50,25,15&amp;amount=50&amp;ref=EOYFR2015&amp;utm_campaign=EOYFR2015&amp;utm_source=mozilla.org&amp;utm_medium=referral&amp;utm_content=footer&amp;currency=usd" class="donate" data-link-type="footer" data-link-name="Donate">Donate</a></li>
-          <li class="clear"><a href="https://wiki.mozilla.org/Webdev/GetInvolved/mozilla.org" data-link-type="footer" data-link-name="Contribute to this site">Contribute to this site</a></li>
+          <li class="clear"><a href="https://github.com/mozilla/activate.mozilla.community" data-link-type="footer" data-link-name="Contribute to this site">Contribute to this site</a></li>
         </ul>
 
 
