--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -28,4 +28,8 @@ layout: default
     {{ content }}
   </div>
 
+  <div id="back-top">
+    <a href="#top"><span class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span></a>
+  </div>
+
 </article>
