Adjust footer to a more clean design

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,45 +2,42 @@
 
   <div class="wrapper container row">
 
-      <div class="footer-col col-md-4">
-        <h1 class="logo"><a href="https://www.mozilla.org/" data-link-type="footer" data-link-name="Mozilla">Mozilla</a></h1>
-        <p class="license">Portions of this content are ©1998–2016 by individual mozilla.org contributors. Content available under a <a href="https://www.mozilla.org/foundation/licensing/website-content/">Creative Commons license</a>.</p>
+    <div class="icons">
+      <div class="icon-container">
+        <div class="icon">
+          <img src="/asserts/img/icon-twitter.svg" class="footer-icon">
+          <a href="https://twitter.com/MozParticipate" target="_blank">Twitter</a>
+        </div>
       </div>
-      <div class="footer-col col-md-4">
-        <ul class="links-join">
-          <li><a href="https://www.mozilla.org/contact/" data-link-type="footer" data-link-name="Contact Us">Contact Us</a></li>
-          <li class="wrap"><a href="https://donate.mozilla.org/en-US/?presets=100,50,25,15&amp;amount=50&amp;ref=EOYFR2015&amp;utm_campaign=EOYFR2015&amp;utm_source=mozilla.org&amp;utm_medium=referral&amp;utm_content=footer&amp;currency=usd" class="donate" data-link-type="footer" data-link-name="Donate">Donate</a></li>
-          <li class="clear"><a href="https://github.com/mozilla/activate.mozilla.community" data-link-type="footer" data-link-name="Contribute to this site">Contribute to this site</a></li>
-        </ul>
-
-
-        <ul class="links-legal">
-          <li><a href="https://www.mozilla.org/privacy/" data-link-type="footer" data-link-name="Privacy">Privacy</a></li>
-          <li class="wrap"><a href="https://www.mozilla.org/privacy/websites/#cookies" data-link-type="footer" data-link-name="Cookies">Cookies</a></li>
-          <li class="wrap"><a href="https://www.mozilla.org/about/legal/" data-link-type="footer" data-link-name="Legal">Legal</a></li>
-          <li class="clear"><a href="https://www.mozilla.org/about/legal/fraud-report/" data-link-type="footer" data-link-name="Report Trademark Abuse">Report Trademark Abuse</a></li>
-        </ul>
+      <div class="icon-container">
+        <div class="icon">
+          <img src="/asserts/img/icon-irc.svg" class="footer-icon">
+          <a href="https://discourse.mozilla-community.org/c/participation-leaders" target="_blank">Discussion</a>
+        </div>
       </div>
-      <div class="footer-col col-md-4">
-        <ul class="links-social">
-          <li>
-            Mozilla:
-            <ul>
-              <li><a href="https://twitter.com/mozilla" data-link-type="footer" data-link-name="Twitter">Twitter</a></li>
-              <li><a href="https://www.facebook.com/mozilla" data-link-type="footer" data-link-name="Facebook">Facebook</a></li>
-            </ul>
-          </li>
-          <li>
-            Firefox:
-            <ul>
-              <li><a href="https://twitter.com/firefox" data-link-type="footer" data-link-name="Twitter">Twitter</a></li>
-              <li><a href="https://www.facebook.com/Firefox" data-link-type="footer" data-link-name="Facebook">Facebook</a></li>
-              <li><a href="https://www.youtube.com/firefoxchannel" data-link-type="footer" data-link-name="YouTube">YouTube</a></li>
-            </ul>
-          </li>
-        </ul>
-
+      <div class="icon-container">
+        <div class="icon">
+          <img src="/asserts/img/icon-code.svg" class="footer-icon">
+          <a href="https://github.com/mozilla/activate.mozilla.community" target="_blank">Contribute</a>
+        </div>
       </div>
+      <div class="icon-container">
+        <div class="icon">
+          <img src="/asserts/img/icon-terms.svg" class="footer-icon">
+          <a href="https://www.mozilla.org/en-US/about/legal.html" target="_blank">Legal</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer-content">
+      <a href="https://www.mozilla.org/" class="logo" target="_blank">
+        <img src="/asserts/img/mozilla-wordmark.svg" height="30" width="105"></a>
+      <p>
+        Mozilla is a global non-profit dedicated to putting you in control of your online
+        experience and shaping the future of the web for the public good. Visit us at
+        <a target="_blank" href="//mozilla.org">mozilla.org</a>
+      </p>
+    </div>
 
   </div>
 
