Turn links in text to bold

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -8,8 +8,6 @@ dl, dd, ol, ul, figure {
     padding: 0;
 }
 
-
-
 /**
  * Basic styling
  */
@@ -100,6 +98,7 @@ h1, h2, h3, h4, h5, h6 {
 a {
     color: $brand-color;
     text-decoration: none;
+    font-weight: bold;
 
     &:focus,
     &:active {
