--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,9 +16,10 @@
       <a class="page-link" href="/{{ l.lang-url }}roadmap/">{{ l.roadmap }}</a>
       <a class="page-link" href="/{{ l.lang-url }}participation/">{{ l.participation }}</a>
       <a class="page-link" href="/{{ l.lang-url }}faq/">{{ l.faq }}</a>
+      <a class="page-link" href="/{{ l.lang-url }}leaderboard/">{{ l.leaderboard }}</a>
     </div>
 
-    <div id="tabzilla" class="hidden-xs">
+    <div id="tabzilla" class="hidden-xs hidden-sm">
       <a href="https://www.mozilla.org/" data-link-type="nav" data-link-name="tabzilla">Mozilla</a>
     </div>
 
